# howhow_facenet

./: .gitignore  README.md  pyproject.toml
src/: train_softmax.py  train_tripletloss.py
src/align/: detect_face.py
