[tool.poetry]
name = "1facenet"
version = "0.1.0"
description = ""
authors = ["c95sbh <s1075408@g.yzu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "1.7"
scipy = "1.2.1"
opencv-python = "^4.5.2"
sklearn = "^0.0"
Pillow = "^8.3.0"
#protobuf = "3.6.0"

facenet = "^1.0.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
